--- a/webapp-ang/src/app/app.component.html
+++ b/webapp-ang/src/app/app.component.html
@@ -1,5 +1,104 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<main class="app">
+  <app-header></app-header>
+
+  <div class="cerveja-selecionada-block">
+    <div class="cerveja-selecionada">
+      <img id="js-img-selected" class="cerveja-selecionada-img" src="https://images.punkapi.com/v2/keg.png" alt="cerveja selecionada">
+      <div class="cerveja-selecionada-nome">Buzz</div>
+      <div class="cerveja-selecionada-label"> Reall Bitter Experience</div>
+    </div>
+  </div>
+
+  <!-- PART 3 -->
+  <div class="cervejas">
+    <div class="cervejas-filtro-block">
+      <input class="cervejas-filtro-input" type="text" placeholder="Eu quero uma...">
+    </div>
+    <ul class="cervejas-lista">
+      <li class="cervejas-lista-item">
+        <div class="cerveja" id="c1">
+          <div class="cerveja-img-block">
+            <img class="cerveja-img" src="https://images.punkapi.com/v2/keg.png" alt="cerveja selecionada">
+          </div>
+          <div class="cerveja-nome">Buzz</div>
+        </div>
+      </li>
+      <li class="cervejas-lista-item">
+        <div class="cerveja" id="c2">
+          <div class="cerveja-img-block">
+            <img class="cerveja-img" src="https://images.punkapi.com/v2/6.png" alt="cerveja selecionada">
+          </div>
+          <div class="cerveja-nome">Buzz</div>
+        </div>
+      </li>
+      <li class="cervejas-lista-item">
+        <div class="cerveja" id="c3">
+          <div class="cerveja-img-block">
+            <img class="cerveja-img" src="https://images.punkapi.com/v2/2.png" alt="cerveja selecionada">
+          </div>
+          <div class="cerveja-nome">Buzz</div>
+        </div>
+      </li>
+      <li class="cervejas-lista-item">
+        <div class="cerveja" id="c4">
+          <div class="cerveja-img-block">
+            <img class="cerveja-img" src="https://images.punkapi.com/v2/9.png" alt="cerveja selecionada">
+          </div>
+          <div class="cerveja-nome">Buzz</div>
+        </div>
+      </li>
+      <li class="cervejas-lista-item">
+        <div class="cerveja" id="c5">
+          <div class="cerveja-img-block">
+            <img class="cerveja-img" src="https://images.punkapi.com/v2/8.png" alt="cerveja selecionada">
+          </div>
+          <div class="cerveja-nome">Buzz</div>
+        </div>
+      </li>
+      <li class="cervejas-lista-item">
+        <div class="cerveja" id="c6">
+          <div class="cerveja-img-block">
+            <img class="cerveja-img" src="https://images.punkapi.com/v2/10.png" alt="cerveja selecionada">
+          </div>
+          <div class="cerveja-nome">Buzz</div>
+        </div>
+      </li>
+      <li class="cervejas-lista-item">
+        <div class="cerveja" id="c7">
+          <div class="cerveja-img-block">
+            <img class="cerveja-img" src="https://images.punkapi.com/v2/6.png" alt="cerveja selecionada">
+          </div>
+          <div class="cerveja-nome">Buzz</div>
+        </div>
+      </li>
+    </ul>
+  </div>
+</main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
+ <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
@@ -18,3 +117,4 @@
   </li>
 </ul>
 
+ -->
