--- a/webapp-ang/src/app/components/cerveja/cerveja.component.html
+++ b/webapp-ang/src/app/components/cerveja/cerveja.component.html
@@ -1,4 +1,4 @@
-<div class="cerveja">
+<div (click)="onSelecionarCerveja()" class="cerveja">
   <div class="cerveja-img-block">
     <img class="cerveja-img" [src]="cerveja.image_url" alt="cerveja selecionada">
   </div>
